--- a/package.json
+++ b/package.json
@@ -34,5 +34,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.21.1",
+    "node-sass": "^5.0.0",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.32.11",
+    "sass-loader": "^11.0.1"
   }
 }
