--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
     "node-sass": "^5.0.0",
     "react-redux": "^7.2.3",
