--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "hook": "^0.0.5",
     "node-sass": "^5.0.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
