--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "hook": "^0.0.5",
     "lity": "^2.4.1",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
