--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-sass": "^5.0.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
+    "react-scroll-to-bottom": "^4.1.0",
     "react-slick": "^0.28.1",
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.11",
