--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "formik": "^2.2.6",
     "hook": "^0.0.5",
     "lity": "^2.4.1",
     "moment": "^2.29.1",
@@ -52,6 +53,7 @@
     "react-slick": "^0.28.1",
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.11",
-    "sass-loader": "^11.0.1"
+    "sass-loader": "^11.0.1",
+    "yup": "^0.32.9"
   }
 }
