--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^0.21.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "formik": "^2.2.6",
+    "history": "4.10.0",
     "hook": "^0.0.5",
     "lity": "^2.4.1",
     "moment": "^2.29.1",
