--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.6.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
