--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.15.6",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -49,6 +50,7 @@
     "lity": "^2.4.1",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
+    "react-datepicker": "^3.8.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scroll-to-bottom": "^4.1.0",
